examples/workloads-scheduling/network-policy/deployment-blue.yaml
# Deployment azul
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-deployment
  namespace: colors
  labels:
    app: blue
spec:
  selector:
    matchLabels:
      app: blue
  replicas: 1
  template:
    metadata:
      labels:
        app: blue
    spec:
      containers:
      - name: blue
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config
          mountPath: /usr/share/nginx/html/
      volumes:
      - name: nginx-config
        configMap:
          name: blue-configmap
# Configmap blue
---
apiVersion: v1
kind: Service
metadata:
  name: blue-service
  namespace: colors
spec:
  selector:
    app: blue
  ports:
  - port: 80
    targetPort: 80
